2008-08-27  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpuimanager.c (gimp_ui_manager_item_key_press):
	try the find_widget_under_pointer() hack only if the menu item's
	parent is really a GtkMenu (not a GtkMenuBar). Fixes crash spotted
	by rubikcube.

2008-08-27  Lars-Peter Clausen  <lars@metafoo.de>

	* plug-ins/pygimp/pygimp-tile.c
	(pr_subscript): Removed some unnecessary g_new/g_free and improved 
	range checking.
	(pr_ass_sub): Improved range checking.
	(pygimp_pixel_rgn_new): Clamp pixel region size to the drawable's size.

2008-08-27  Sven Neumann  <sven@gimp.org>

	* app/core/gimp-transform-region.c: sprinkled more const qualifiers.

	* app/paint-funcs/scale-region.c: call the progress callback less
	often.

2008-08-27  Sven Neumann  <sven@gimp.org>

	* app/tools/gimptransformtool.c: moved hiding the dialog from 
	gimp_transform_tool_real_transform() to gimp_transform_tool_doit().
	Delay undrawing the preview in doit() until the transformation is
	done. This removes the annoying flicker at the end.

2008-08-27  Sven Neumann  <sven@gimp.org>

	* app/tools/gimptransformtool.c (gimp_transform_tool_real_transform):
	hide the tool dialog before starting to perform the transformation.

2008-08-27  Sven Neumann  <sven@gimp.org>

	* app/core/gimp-transform-region.c: also use PixelSurround for the
	linear interpolation. Sprinkled some const qualifiers.

2008-08-26  Lars-Peter Clausen  <lars@metafoo.de>

	* plug-ins/pygimp/gimpmodule.c:
	Don't set tp_new for PyGimpTile_Type and PyGimpPixelRgn_Type as both
	don't have init functions.

2008-08-26  Lars-Peter Clausen  <lars@metafoo.de>

	* plug-ins/pygimp/pygimp-tile.c
	(pf_init): Ensure that the python drawables gimp drawable is set.
	(pf_dealloc): Don't crash if the pixel fetchers init function failed.

2008-08-26  Sven Neumann  <sven@gimp.org>

	* app/base/pixel-surround.c: updated documentation.

2008-08-26  Sven Neumann  <sven@gimp.org>

	* app/paint-funcs/scale-region.c: further simplified the code path